--- a/public/styles/scss/_banner.scss
+++ b/public/styles/scss/_banner.scss
@@ -33,7 +33,7 @@
         max-width: 0.5rem;
         cursor: pointer;
         font-family: $font1;
-        font-size: 1.25em;
+        font-size: 1.1em;
         opacity: 0.4;
         &:hover{
           text-decoration: underline;
